--- a/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-modal/modal-example/modal-example.component.scss
+++ b/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-modal/modal-example/modal-example.component.scss
@@ -1,9 +1,9 @@
-@import "../../../../../variables";
+@import '../../../../../variables';
 
 .content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: $color-neutral-lightest;
-    height: rhythm(40);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: $color-neutral-lightest;
+  height: rhythm(40);
 }
