--- a/apps/sistema-demo/src/app/sistema-pages/sistema-back-button/sistema-back-button.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/sistema-back-button/sistema-back-button.component.html
@@ -1,8 +1,15 @@
 <pa-demo-page>
   <pa-demo-title>Back button</pa-demo-title>
   <pa-demo-description>
-    <p>Sistema provides a standalone back button component which is wrapping and styling a <code>pa-button</code> link.</p>
-    <p><code>nsi-back-button</code> is a small basic icon and text button with a smaller size padding than regular small buttons, as shown below.</p>
+    <p>
+      Sistema provides a standalone back button component which is wrapping and styling a
+      <code>pa-button</code>
+      link.
+    </p>
+    <p>
+      <code>nsi-back-button</code>
+      is a small basic icon and text button with a smaller size padding than regular small buttons, as shown below.
+    </p>
   </pa-demo-description>
 
   <pa-demo-examples>
@@ -13,7 +20,11 @@
     <h3>Inputs</h3>
     <dl>
       <dt>link</dt>
-      <dd>Path to go to when clicking on the button. Navigation is done using <code>routerLink</code> directive</dd>
+      <dd>
+        Path to go to when clicking on the button. Navigation is done using
+        <code>routerLink</code>
+        directive
+      </dd>
     </dl>
   </pa-demo-usage>
 
