--- a/apps/sistema-demo/src/app/sistema-pages/sistema-label/sistema-label.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/sistema-label/sistema-label.component.html
@@ -1,26 +1,45 @@
 <pa-demo-page>
   <pa-demo-title>Labels</pa-demo-title>
   <pa-demo-description>
-    <p>Nuclia's label are done using <a routerLink="/chip">Pastanaga's selectionable chip</a> component.</p>
+    <p>
+      Nuclia's label are done using
+      <a routerLink="/chip">Pastanaga's selectionable chip</a>
+      component.
+    </p>
     <p>We provide them in four colors: blue, black, yellow and green.</p>
   </pa-demo-description>
   <pa-demo-examples>
-    <pa-chip-selectionable textColor="#1D00C2FF" borderColor="#1D00C2FF" backgroundColor="#C7BDFFFF"
-                           [selected]="selection === 1"
-                           (select)="onSelect(1)">Blue label
+    <pa-chip-selectionable
+      textColor="#1D00C2FF"
+      borderColor="#1D00C2FF"
+      backgroundColor="#C7BDFFFF"
+      [selected]="selection === 1"
+      (select)="onSelect(1)">
+      Blue label
     </pa-chip-selectionable>
-    <pa-chip-selectionable [selected]="selection === 2"
-                           (select)="onSelect(2)">Black label</pa-chip-selectionable>
-    <pa-chip-selectionable textColor="#C7A900FF" borderColor="#C7A900FF" backgroundColor="#FFF8D1FF"
-                           [selected]="selection === 3"
-                           (select)="onSelect(3)">Yellow label
+    <pa-chip-selectionable
+      [selected]="selection === 2"
+      (select)="onSelect(2)">
+      Black label
     </pa-chip-selectionable>
-    <pa-chip-selectionable textColor="#0CAD55" borderColor="#0CAD55" backgroundColor="#DAF3E6"
-                           [selected]="selection === 4"
-                           (select)="onSelect(4)">Green label
+    <pa-chip-selectionable
+      textColor="#C7A900FF"
+      borderColor="#C7A900FF"
+      backgroundColor="#FFF8D1FF"
+      [selected]="selection === 3"
+      (select)="onSelect(3)">
+      Yellow label
+    </pa-chip-selectionable>
+    <pa-chip-selectionable
+      textColor="#0CAD55"
+      borderColor="#0CAD55"
+      backgroundColor="#DAF3E6"
+      [selected]="selection === 4"
+      (select)="onSelect(4)">
+      Green label
     </pa-chip-selectionable>
 
-    <ol style="margin: 32px 16px; padding: 0;">
+    <ol style="margin: 32px 16px; padding: 0">
       <li>Click on a label to select it.</li>
       <li>Change the selection by clicking on another label.</li>
       <li>Unselect them all by clicking on the current selection.</li>
@@ -28,5 +47,6 @@
   </pa-demo-examples>
 
   <pa-demo-code>
-    <pre><code>{{code}}</code></pre></pa-demo-code>
+    <pre><code>{{code}}</code></pre>
+  </pa-demo-code>
 </pa-demo-page>
