--- a/apps/sistema-demo/src/app/welcome-page/welcome-page.component.html
+++ b/apps/sistema-demo/src/app/welcome-page/welcome-page.component.html
@@ -1,8 +1,27 @@
 <pa-demo-page>
   <pa-demo-title>Sistema</pa-demo-title>
   <pa-demo-description>
-    <p>Sistema is the name of Nuclia's design system angular implementation which is based on <a href="https://plone.github.io/pastanaga-angular/">Pastanaga angular</a>.</p>
-    <p>Sistema library contains Nuclia's specific theme and assets, as well as any UI component which doesn't belong to Pastanaga.</p>
-    <p>Components are prefixed by <code>nsi-</code> (standing for <strong>N</strong>uclia <strong>Si</strong>stema), while services are prefixed by <code>Sis</code> (for example <code>SisToastService</code>).</p>
+    <p>
+      Sistema is the name of Nuclia's design system angular implementation which is based on
+      <a href="https://plone.github.io/pastanaga-angular/">Pastanaga angular</a>
+      .
+    </p>
+    <p>
+      Sistema library contains Nuclia's specific theme and assets, as well as any UI component which doesn't belong to
+      Pastanaga.
+    </p>
+    <p>
+      Components are prefixed by
+      <code>nsi-</code>
+      (standing for
+      <strong>N</strong>
+      uclia
+      <strong>Si</strong>
+      stema), while services are prefixed by
+      <code>Sis</code>
+      (for example
+      <code>SisToastService</code>
+      ).
+    </p>
   </pa-demo-description>
 </pa-demo-page>
