--- a/apps/sistema-demo/src/_variables.scss
+++ b/apps/sistema-demo/src/_variables.scss
@@ -1,1 +1,1 @@
-@import "../../../libs/pastanaga-angular/projects/pastanaga-angular/src/styles/variables";
+@import '../../../libs/pastanaga-angular/projects/pastanaga-angular/src/styles/variables';
