--- a/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-buttons/sistema-buttons.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-buttons/sistema-buttons.component.html
@@ -9,29 +9,38 @@
     <div class="pa-container">
       <div class="pa-buttons-container">
         <div class="pa-buttons-block">
-          <pa-button kind="primary"
-                     aspect="solid"
-                     [size]="selectedSize"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
-          <pa-button icon="search"
-                     iconAndText
-                     kind="primary"
-                     aspect="solid"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
-          <pa-button icon="search"
-                     kind="primary"
-                     aspect="solid"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [size]="selectedSize"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
+          <pa-button
+            kind="primary"
+            aspect="solid"
+            [size]="selectedSize"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
+          <pa-button
+            icon="search"
+            iconAndText
+            kind="primary"
+            aspect="solid"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
+          <pa-button
+            icon="search"
+            kind="primary"
+            aspect="solid"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [size]="selectedSize"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
         </div>
 
         <div class="pa-buttons-block">
@@ -41,24 +50,32 @@
             [size]="selectedSize"
             [active]="activeState"
             [disabled]="disabledState"
-            (click)="clickOn($event)">Basic</pa-button>
-          <pa-button icon="search"
-                     iconAndText
-                     kind="primary"
-                     aspect="basic"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Basic</pa-button>
-          <pa-button icon="search"
-                     kind="primary"
-                     aspect="basic"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Basic</pa-button>
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
+          <pa-button
+            icon="search"
+            iconAndText
+            kind="primary"
+            aspect="basic"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
+          <pa-button
+            icon="search"
+            kind="primary"
+            aspect="basic"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
         </div>
       </div>
     </div>
@@ -67,29 +84,38 @@
     <div class="pa-container">
       <div class="pa-buttons-container">
         <div class="pa-buttons-block">
-          <pa-button kind="secondary"
-                     aspect="solid"
-                     [size]="selectedSize"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
-          <pa-button icon="search"
-                     iconAndText
-                     kind="secondary"
-                     aspect="solid"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
-          <pa-button icon="search"
-                     kind="secondary"
-                     aspect="solid"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
+          <pa-button
+            kind="secondary"
+            aspect="solid"
+            [size]="selectedSize"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
+          <pa-button
+            icon="search"
+            iconAndText
+            kind="secondary"
+            aspect="solid"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
+          <pa-button
+            icon="search"
+            kind="secondary"
+            aspect="solid"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
         </div>
         <div class="pa-buttons-block dashboard-background">
           <pa-button
@@ -98,24 +124,32 @@
             [size]="selectedSize"
             [active]="activeState"
             [disabled]="disabledState"
-            (click)="clickOn($event)">Basic</pa-button>
-          <pa-button icon="search"
-                     iconAndText
-                     kind="secondary"
-                     aspect="basic"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Basic</pa-button>
-          <pa-button icon="search"
-                     kind="secondary"
-                     aspect="basic"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Basic</pa-button>
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
+          <pa-button
+            icon="search"
+            iconAndText
+            kind="secondary"
+            aspect="basic"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
+          <pa-button
+            icon="search"
+            kind="secondary"
+            aspect="basic"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
         </div>
       </div>
     </div>
@@ -124,29 +158,38 @@
     <div class="pa-container">
       <div class="pa-buttons-container">
         <div class="pa-buttons-block">
-          <pa-button kind="destructive"
-                     aspect="solid"
-                     [size]="selectedSize"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
-          <pa-button icon="search"
-                     iconAndText
-                     kind="destructive"
-                     aspect="solid"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
-          <pa-button icon="search"
-                     kind="destructive"
-                     aspect="solid"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [active]="activeState"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
+          <pa-button
+            kind="destructive"
+            aspect="solid"
+            [size]="selectedSize"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
+          <pa-button
+            icon="search"
+            iconAndText
+            kind="destructive"
+            aspect="solid"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
+          <pa-button
+            icon="search"
+            kind="destructive"
+            aspect="solid"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [active]="activeState"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
         </div>
         <div class="pa-buttons-block">
           <pa-button
@@ -155,24 +198,32 @@
             [size]="selectedSize"
             [disabled]="disabledState"
             [active]="activeState"
-            (click)="clickOn($event)">Basic</pa-button>
-          <pa-button icon="search"
-                     iconAndText
-                     kind="destructive"
-                     aspect="basic"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [disabled]="disabledState"
-                     [active]="activeState"
-                     (click)="clickOn($event)">Basic</pa-button>
-          <pa-button icon="search"
-                     kind="destructive"
-                     aspect="basic"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [disabled]="disabledState"
-                     [active]="activeState"
-                     (click)="clickOn($event)">Basic</pa-button>
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
+          <pa-button
+            icon="search"
+            iconAndText
+            kind="destructive"
+            aspect="basic"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [disabled]="disabledState"
+            [active]="activeState"
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
+          <pa-button
+            icon="search"
+            kind="destructive"
+            aspect="basic"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [disabled]="disabledState"
+            [active]="activeState"
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
         </div>
       </div>
     </div>
@@ -181,26 +232,35 @@
     <div class="pa-container">
       <div class="pa-buttons-container inverted">
         <div class="pa-buttons-block">
-          <pa-button kind="inverted"
-                     aspect="solid"
-                     [size]="selectedSize"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
-          <pa-button icon="search"
-                     iconAndText
-                     kind="inverted"
-                     aspect="solid"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
-          <pa-button icon="search"
-                     kind="inverted"
-                     aspect="solid"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Solid</pa-button>
+          <pa-button
+            kind="inverted"
+            aspect="solid"
+            [size]="selectedSize"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
+          <pa-button
+            icon="search"
+            iconAndText
+            kind="inverted"
+            aspect="solid"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
+          <pa-button
+            icon="search"
+            kind="inverted"
+            aspect="solid"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Solid
+          </pa-button>
         </div>
         <div class="pa-buttons-block">
           <pa-button
@@ -208,39 +268,55 @@
             aspect="basic"
             [size]="selectedSize"
             [disabled]="disabledState"
-            (click)="clickOn($event)">Basic</pa-button>
-          <pa-button icon="search"
-                     iconAndText
-                     kind="inverted"
-                     aspect="basic"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Basic</pa-button>
-          <pa-button icon="search"
-                     kind="inverted"
-                     aspect="basic"
-                     [size]="selectedSize"
-                     [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
-                     [disabled]="disabledState"
-                     (click)="clickOn($event)">Basic</pa-button>
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
+          <pa-button
+            icon="search"
+            iconAndText
+            kind="inverted"
+            aspect="basic"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
+          <pa-button
+            icon="search"
+            kind="inverted"
+            aspect="basic"
+            [size]="selectedSize"
+            [iconSize]="selectedSize === 'large' ? 'medium' : 'small'"
+            [disabled]="disabledState"
+            (click)="clickOn($event)">
+            Basic
+          </pa-button>
         </div>
       </div>
     </div>
   </pa-demo-examples>
   <pa-demo-configuration>
     <div class="pa-demo-configuration-field">
-      <pa-select label="Size" [(ngModel)]="selectedSize">
+      <pa-select
+        label="Size"
+        [(ngModel)]="selectedSize">
         <pa-option value="small">small</pa-option>
         <pa-option value="medium">medium</pa-option>
         <pa-option value="large">large</pa-option>
       </pa-select>
     </div>
     <div class="pa-demo-configuration-field">
-      <pa-checkbox id="active"
-                   [(ngModel)]="activeState">Active state</pa-checkbox>
-      <pa-checkbox id="disabled"
-                   [(ngModel)]="disabledState">Disabled state</pa-checkbox>
+      <pa-checkbox
+        id="active"
+        [(ngModel)]="activeState">
+        Active state
+      </pa-checkbox>
+      <pa-checkbox
+        id="disabled"
+        [(ngModel)]="disabledState">
+        Disabled state
+      </pa-checkbox>
     </div>
   </pa-demo-configuration>
 
