--- a/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-buttons/sistema-buttons.component.scss
+++ b/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-buttons/sistema-buttons.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../variables";
+@import '../../../../variables';
 
 .dashboard-background {
   background: $color-neutral-lightest;
