--- a/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-modal/sistema-modal.component.scss
+++ b/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-modal/sistema-modal.component.scss
@@ -1,10 +1,10 @@
-@import "../../../../variables";
+@import '../../../../variables';
 
 .open-modal-button {
-    margin-bottom: rhythm(1);
+  margin-bottom: rhythm(1);
 }
 
 .nested {
-    list-style: none;
-    margin-bottom: rhythm(1);
+  list-style: none;
+  margin-bottom: rhythm(1);
 }
