--- a/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-toasts/sistema-toast.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/pastanaga-pages-override/sistema-toasts/sistema-toast.component.html
@@ -1,23 +1,53 @@
 <pa-demo-page>
   <pa-demo-title>Toast</pa-demo-title>
   <pa-demo-description>
-    <p>Sistema provides a system for displaying toast messages simply by calling <code>SisToastService</code>.
-      This service is based on Pastanaga <a href="https://plone.github.io/pastanaga-angular/toast" target="_blank">ToastService</a>.</p>
-    <p>Sistema toasts are displayed with a title, an icon on the left, and a close button on the right. The title and icon depends on the toast type:</p>
+    <p>
+      Sistema provides a system for displaying toast messages simply by calling
+      <code>SisToastService</code>
+      . This service is based on Pastanaga
+      <a
+        href="https://plone.github.io/pastanaga-angular/toast"
+        target="_blank">
+        ToastService
+      </a>
+      .
+    </p>
+    <p>
+      Sistema toasts are displayed with a title, an icon on the left, and a close button on the right. The title and
+      icon depends on the toast type:
+    </p>
     <ul>
-      <li><strong>info</strong>: neutral toast with "Information" title and an info icon. Closing automatically after 5 seconds.</li>
-      <li><strong>success</strong>: neutral toast with "Success" title and a circle-check icon. Closing automatically after 5 seconds.</li>
-      <li><strong>warning</strong>: black toast with "Warning" title and a warning icon. Stay open until the user clicks on the button.</li>
-      <li><strong>error</strong>: destructive toast with "Error" title and a circle-cross icon. Stay open until the user clicks on the button.</li>
+      <li>
+        <strong>info</strong>
+        : neutral toast with "Information" title and an info icon. Closing automatically after 5 seconds.
+      </li>
+      <li>
+        <strong>success</strong>
+        : neutral toast with "Success" title and a circle-check icon. Closing automatically after 5 seconds.
+      </li>
+      <li>
+        <strong>warning</strong>
+        : black toast with "Warning" title and a warning icon. Stay open until the user clicks on the button.
+      </li>
+      <li>
+        <strong>error</strong>
+        : destructive toast with "Error" title and a circle-cross icon. Stay open until the user clicks on the button.
+      </li>
     </ul>
   </pa-demo-description>
 
   <pa-demo-examples>
-    <pa-button kind="primary" (click)="openToast()">Display toast</pa-button>
+    <pa-button
+      kind="primary"
+      (click)="openToast()">
+      Display toast
+    </pa-button>
   </pa-demo-examples>
   <pa-demo-configuration>
     <div class="pa-demo-configuration-field">
-      <pa-select label="Toast type" [(ngModel)]="selectedType">
+      <pa-select
+        label="Toast type"
+        [(ngModel)]="selectedType">
         <pa-option value="info">Info</pa-option>
         <pa-option value="success">Success</pa-option>
         <pa-option value="warning">Warning</pa-option>
@@ -27,7 +57,13 @@
   </pa-demo-configuration>
 
   <pa-demo-usage>
-    <p>Make sure to import <code>PaToastModule</code> in your application, and then use <code>SisToastService</code> to display toasts.</p>
+    <p>
+      Make sure to import
+      <code>PaToastModule</code>
+      in your application, and then use
+      <code>SisToastService</code>
+      to display toasts.
+    </p>
   </pa-demo-usage>
 
   <pa-demo-code>
