--- a/apps/sistema-demo/src/app/sistema-pages/sistema-password-input/sistema-password-input.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/sistema-password-input/sistema-password-input.component.html
@@ -1,14 +1,29 @@
 <pa-demo-page>
   <pa-demo-title>Password input</pa-demo-title>
   <pa-demo-description>
-    <p>Sistema provides a password input field displaying a password input and a button allowing to show/hide the password.</p>
-    <p><code>nsi-password-input</code> is extending <code>NativeTextFieldDirective</code> meaning it's working well with both Angular <code>FormModule</code> and <code>ReactiveFormModule</code>.</p>
+    <p>
+      Sistema provides a password input field displaying a password input and a button allowing to show/hide the
+      password.
+    </p>
+    <p>
+      <code>nsi-password-input</code>
+      is extending
+      <code>NativeTextFieldDirective</code>
+      meaning it's working well with both Angular
+      <code>FormModule</code>
+      and
+      <code>ReactiveFormModule</code>
+      .
+    </p>
   </pa-demo-description>
 
   <pa-demo-examples>
     <div style="width: 400px">
-      <nsi-password-input [readonly]="readonly"
-                          [disabled]="disabled">Password</nsi-password-input>
+      <nsi-password-input
+        [readonly]="readonly"
+        [disabled]="disabled">
+        Password
+      </nsi-password-input>
     </div>
     <div class="options">
       <pa-checkbox [(value)]="disabled">Disable</pa-checkbox>
@@ -17,44 +32,85 @@
   </pa-demo-examples>
 
   <pa-demo-usage>
-    <h3>Inherited from <code>PaFormControlDirective</code></h3>
+    <h3>
+      Inherited from
+      <code>PaFormControlDirective</code>
+    </h3>
     <pa-demo-pa-form-control-usage></pa-demo-pa-form-control-usage>
 
-    <h3>Inherited from <code>NativeTextFieldDirective</code></h3>
+    <h3>
+      Inherited from
+      <code>NativeTextFieldDirective</code>
+    </h3>
 
-    <p><code>nsi-password-input</code> is extending <code>NativeTextFieldDirective</code> but some of the Inputs inherited from it doesn't make sense in the context of a password field. Here's the list of Inputs which have an effect on <code>nsi-password-input</code>:</p>
+    <p>
+      <code>nsi-password-input</code>
+      is extending
+      <code>NativeTextFieldDirective</code>
+      but some of the Inputs inherited from it doesn't make sense in the context of a password field. Here's the list of
+      Inputs which have an effect on
+      <code>nsi-password-input</code>
+      :
+    </p>
 
     <h4>Inputs</h4>
     <dl>
       <dt>errorMessages</dt>
-      <dd>Provides default messages to display for the possible error keys when none is present in the errors object. If a message (string) is provided for a given key, it
-        will be displayed rather than the message provided in errorMessages.
+      <dd>
+        Provides default messages to display for the possible error keys when none is present in the errors object. If a
+        message (string) is provided for a given key, it will be displayed rather than the message provided in
+        errorMessages.
       </dd>
 
       <dt>hasFocus</dt>
-      <dd>triggers the focus on the input field <small>(optional)</small></dd>
+      <dd>
+        triggers the focus on the input field
+        <small>(optional)</small>
+      </dd>
 
       <dt>help</dt>
-      <dd>A hint to display, helping the user when filling a form field <small>(optional)</small></dd>
+      <dd>
+        A hint to display, helping the user when filling a form field
+        <small>(optional)</small>
+      </dd>
 
       <dt>placeholder</dt>
-      <dd>Field's placeholder <small>(optional)</small></dd>
+      <dd>
+        Field's placeholder
+        <small>(optional)</small>
+      </dd>
 
       <dt>showAllErrors</dt>
-      <dd>Display all errors or only the first error encountered (errors being sorted by key) <small>(default:
-        true)</small></dd>
+      <dd>
+        Display all errors or only the first error encountered (errors being sorted by key)
+        <small>(default: true)</small>
+      </dd>
     </dl>
 
     <h4>Outputs</h4>
     <dl>
       <dt>keyUp</dt>
-      <dd>Emits <code>string</code> value on key up event</dd>
+      <dd>
+        Emits
+        <code>string</code>
+        value on key up event
+      </dd>
 
       <dt>enter</dt>
-      <dd>Emits <code>KeyboardEvent</code> and <code>string</code> value when pressing enter</dd>
+      <dd>
+        Emits
+        <code>KeyboardEvent</code>
+        and
+        <code>string</code>
+        value when pressing enter
+      </dd>
 
       <dt>focusing</dt>
-      <dd>Emits <code>FocusEvent</code> on focus</dd>
+      <dd>
+        Emits
+        <code>FocusEvent</code>
+        on focus
+      </dd>
 
       <dt>blurring</dt>
       <dd>Emits current value on blur</dd>
